kubernetes/home/longhorn-system/dashboard/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.local.opryga.com`)
      kind: Rule
      middlewares:
        # - name: longhorn-dashboard-basicauth
        #   namespace: longhorn-system
        - name: default-headers
        - name: local-ip-list
        - name: oauth-forward-auth
      services:
        - name: longhorn-frontend
          port: 80
  tls:
    secretName: local-opryga-com-tls # give it the ole tls cert
